# libmerr

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .prettierrc.yaml  README.md  REUSE.toml  flake.nix  meson.build  meson_options.txt  package.json
.github/: dependabot.yaml
.github/workflows/: alejandra.yaml  builds.yaml  check-flake.yaml  codeql.yaml  markdownlint.yaml  prettier.yaml  release.yaml  reuse.yaml
.reuse/: dep5
include/: merr.h  meson.build
lib/: config.h.in  merr.c  meson.build
subprojects/: libbsd.wrap
subprojects/tester/: meson.build  tester.h  this-is-a-really-long-filename-in-order-to-test-the-handling-of-the-long-file-name-scenario.c
tests/: merr-test.c  meson.build
